Fix alignment of icons and long text in autocomplete

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -981,7 +981,7 @@ input.noselect {
   z-index: 1000 !important;
 }
 .ui-autocomplete .ui-menu-item {
-  display: block;
+  display: flex;
   padding: 6px 12px;
 }
 .interface-hebrew .ui-autocomplete .ui-menu-item {
